P4/S3/router_acces/iptables.up.rules
# Generated by xtables-save v1.8.2 on Wed Jun 10 18:48:50 2020
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
#ssh des de fuera a DMZ
-A FORWARD -p tcp --dport 22 -d 10.10.1.3 -m state --state NEW,ESTABLISHED -j ACCEPT
-A FORWARD -p tcp --sport 22 -s 10.10.1.3 -m state --state ESTABLISHED -j ACCEPT
-A FORWARD -p tcp --dport 22 -d 10.10.1.4 -m state --state NEW,ESTABLISHED -j ACCEPT
-A FORWARD -p tcp --sport 22 -s 10.10.1.4 -m state --state ESTABLISHED -j ACCEPT
#ssh a router usuaris
-A FORWARD -p tcp --dport 22 -d 10.10.1.2,10.10.4.1,10.10.3.1 -m state --state NEW,ESTABLISHED -j ACCEPT
-A FORWARD -p tcp --sport 22 -s 10.10.1.2,10.10.4.1,10.10.3.1 -m state --state ESTABLISHED -j ACCEPT
#ssh a router servidors i dhcp
-A FORWARD -p tcp --dport 22 -d 10.10.2.2,10.10.5.1,10.10.3.2 -m state --state NEW,ESTABLISHED -j ACCEPT
-A FORWARD -p tcp --sport 22 -s 10.10.2.2,10.10.5.1,10.10.3.2 -m state --state ESTABLISHED -j ACCEPT
-A FORWARD -p tcp --dport 22 -d 10.10.5.2 -m state --state NEW,ESTABLISHED -j ACCEPT
-A FORWARD -p tcp --sport 22 -s 10.10.5.2 -m state --state ESTABLISHED -j ACCEPT

#ssh monitor de xarxa
-A INPUT -p tcp --dport 22 -s 10.10.1.11 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp --sport 22 -d 10.10.1.11 -m state --state ESTABLISHED -j ACCEPT

#Conexión ssh xarxa admin 
-A INPUT -p tcp --dport 22 -s 10.10.2.0/28 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp --sport 22 -d 10.10.2.0/28 -m state --state ESTABLISHED -j ACCEPT

#DNS exterior
-A FORWARD -p udp --dport 53 -d 10.10.1.3,10.10.1.4 -j ACCEPT
-A FORWARD -p udp --sport 53 -s 10.10.1.3,10.10.1.4 -j ACCEPT

-A FORWARD -p udp --dport 53 -s 10.10.1.3 -j ACCEPT
-A FORWARD -p udp --dport 53 -s 10.10.1.4 -j ACCEPT
-A FORWARD -p udp --sport 53 -d 10.10.1.3 -j ACCEPT
-A FORWARD -p udp --sport 53 -d 10.10.1.4 -j ACCEPT

#DNS acces
-A OUTPUT -p udp -d 10.10.1.3,10.10.1.4 --dport 53 -o enp0s9 -j ACCEPT
-A INPUT -p udp -s 10.10.1.3,10.10.1.4 --sport 53 -i enp0s9 -j ACCEPT
-A OUTPUT -p tcp -d 10.10.1.3,10.10.1.4 --dport 53 -o enp0s9 -j ACCEPT
-A INPUT -p tcp -d 10.10.1.3,10.10.1.4 --sport 53  -i enp0s9 -j ACCEPT

#ICMP
-A INPUT -p icmp -d 192.168.1.125 -j ACCEPT
-A OUTPUT -p icmp -s 192.168.1.125 -j ACCEPT
#-A INPUT -p icmp -s 10.10.1.0/28,10.10.2.0/28,10.10.4.0/28,10.10.5.0/28 -j ACCEPT
-A INPUT -p icmp -d 10.10.1.1,10.10.2.1 -j ACCEPT
#-A OUTPUT -p icmp -d 10.10.1.0/28,10.10.2.0/28,10.10.4.0/28,10.10.5.0/28 -j ACCEPT
-A OUTPUT -p icmp -s 10.10.1.1,10.10.2.1 -j ACCEPT
-A FORWARD -p icmp -d 10.10.1.0/28,10.10.2.0/28,10.10.4.0/28,10.10.5.0/28 -j ACCEPT
-A FORWARD -p icmp -s 10.10.1.0/28,10.10.2.0/28,10.10.4.0/28,10.10.5.0/28 -j ACCEPT

#internet
#-A FORWARD -p tcp -m multiport --dports 443,80,8080  -j ACCEPT
#-A FORWARD -p tcp -d 192.168.1.125 -m multiport --sports 443,80,8080 -j ACCEPT


COMMIT

*nat
:PREROUTING ACCEPT [1454:191040]
:INPUT ACCEPT [23:2326]
:POSTROUTING ACCEPT [17:1406]
:OUTPUT ACCEPT [1:67]
-A PREROUTING -i enp0s3 -p udp --dport 53 -j DNAT --to-destination 10.10.1.4:53 -m statistic --mode nth --every 3 --packet 0
-A PREROUTING -i enp0s3 -p udp --dport 53 -j DNAT --to-destination 10.10.1.3:53
-A PREROUTING -i enp0s3 -p tcp --dport 3022 -j DNAT --to-destination 10.10.1.3:22
-A PREROUTING -i enp0s3 -p tcp --dport 3023 -j DNAT --to-destination 10.10.1.4:22
-A POSTROUTING -s 10.10.4.0/28 -o enp0s3 -j MASQUERADE
-A POSTROUTING -s 10.10.1.0/28 -o enp0s3 -j MASQUERADE
-A POSTROUTING -s 10.10.2.0/28 -o enp0s3 -j MASQUERADE
-A POSTROUTING -s 10.10.5.0/28 -o enp0s3 -j MASQUERADE
COMMIT
# Completed on Wed Jun 10 18:48:50 2020
